# cpproll

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: FindLibLBFGS.cmake
example/: generate-dataset.py  test.sh
include/: aroc.cc  aroc.h  buffer.h  config.h.in  eigen.h  hash.h  hash_eigen.h  nll.h  objective.h  options.h  parse.h  roc.h  serialize.h  stage1.h  stage2.h  stage3.h  stats.h
src/: aroc.cc  main.cc  nll.cc  objective.cc  parse.cc  roc.cc  stage1.cc  stage2.cc  stage3.cc
